modification du lien simple-penguins

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import penguins from "../assets/penguins.json";
         <a href="/simple">Simple</a>
       </li>
       <li class="bg-violet-400 text-white px-4 py-2 rounded-2xl">
-        <a href="/simple">Simple penguins</a>
+        <a href="/simple-penguins">Simple penguins</a>
       </li>
     </ul>
   </div>
